--- a/main.html
+++ b/main.html
@@ -3,13 +3,17 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+<!-- 	<link rel="stylesheet" href="styles.css"> -->
+	<h1>My current favourite song is <Ek din pyar></h1>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+<!--     <script type="text/javascript" src="./script.js"> -->
+<!-- </script> -->
+	<div>
+		<a href="https://www.youtube.com/watch?v=gU74mNz64VU>Link"
+	</div>
 
 </body>
 
